gitops/02-services/zot/zot-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zot
  labels:
    istio.io/dataplane-mode: ambient
