gitops/02-services/zot/zot-private-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot-private
  namespace: zot
spec:
  parentRefs:
    - name: private
      namespace: istio-system
      sectionName: https
  hostnames:
    - "registry.mmonteiro.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zot
          port: 5000
